# yonderloft

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  meson.build  pyproject.toml
.github/workflows/: release.yml
build-aux/: render-icon.py
build-aux/flatpak/: uk.aaronworld.Yonderloft.json  update-ruffle.py
catalog/: manifest.json  schema.json
data/: meson.build  uk.aaronworld.Yonderloft.desktop.in  uk.aaronworld.Yonderloft.gschema.xml  uk.aaronworld.Yonderloft.metainfo.xml.in
po/: LINGUAS  POTFILES.in  meson.build
src/: meson.build  yonderloft.in
src/yonderloft/: __init__.py  _build.py.in  application.py  art.py  art_service.py  catalog.py  catalog_io.py  client_installer.py  config.py  main.py  models.py  profiles.py  status.py  style.css  window.py
src/yonderloft/runtimes/: __init__.py  base.py  client.py  flash.py  router.py  ruffle.py  web.py  webfilter.py
src/yonderloft/tools/: __init__.py  validate_catalog.py
src/yonderloft/views/: __init__.py  client_window.py  detail.py  game_page.py  game_window.py  grid.py  widgets.py
tests/: conftest.py  test_art.py  test_catalog_io.py  test_client_installer.py  test_config_profiles.py  test_manifest.py  test_models.py  test_no_gi_dependency.py  test_validate_catalog.py
